# swayscan

./: .gitignore  Cargo.toml  PUBLISHING.md  README.md  data.json  my_report.md  niccce.md  results.txt  stork.md  update.md
examples/: test_access_control.sw  test_reentrancy.sw  vulnerable_contract.sw
src/: analyzer.rs  cli.rs  config.rs  error.rs  main.rs  markdown_generator.rs  parser.rs  pdf_generator.rs  reporter.rs  scanner.rs  utils.rs
src/detectors/: access_control.rs  arbitrary_asset_transfer.rs  ast_visitor.rs  boolean_comparison.rs  business_logic.rs  cryptographic.rs  data_validation.rs  division_before_multiplication.rs  external_call_in_loop.rs  flash_loan_attacks.rs  input_validation.rs  locked_native_asset.rs  logic_errors.rs  missing_logs.rs  mod.rs  price_oracle_manipulation.rs  reentrancy.rs  smart_access_control.rs  smart_analyzer.rs  smart_external_calls.rs  smart_reentrancy.rs  strict_equality.rs  sway_analyzer.rs  unchecked_external_calls.rs  unprotected_storage.rs  unused_import.rs  utxo_vulnerabilities.rs  weak_prng.rs
tests/: integration_tests.rs
